--- a/pages/cart.html
+++ b/pages/cart.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sala App</title>
-    <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/fonwawsome/all.css">
+    <title>Cart Page</title>
+    <link rel="stylesheet" href="../assets/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/fonwawsome/all.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
 </head>
 
@@ -66,38 +66,51 @@
         </nav>
     </header>
 
-    <main>
-        <!-- categories -->
-        <section>
-            <div class="container">
-                <div class="row categories" id="categories">
-                    <div class="col-md-3">
-                        <h5 id="category_3" onclick="addActiveCategory(3)">All Categories</h5>
-                    </div>
-                </div>
+    <div class="container">
+        <h1 class="my-4">Shopping Cart</h1>
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Your Items</h2>
+                <table class="table" style="    background: #fff;">
+                    <thead>
+                        <tr>
+                            <th>Product</th>
+                            <th>Price</th>
+                            <th>Quantity</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Product 1</td>
+                            <td>$10.00</td>
+                            <td>1</td>
+                            <td>$10.00</td>
+                        </tr>
+                        <tr>
+                            <td>Product 2</td>
+                            <td>$15.00</td>
+                            <td>2</td>
+                            <td>$30.00</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-        </section>
-        <!-- products -->
-        <section>
-            <div class="container">
-                <div class="row my-5 gy-3" id="products">
-
-                </div>
+            <div class="col-md-4">
+                <h2>Summary</h2>
+                <p>Subtotal: $40.00</p>
+                <p>Tax: $4.00</p>
+                <h3>Total: $44.00</h3>
+                <button class="btn btn-primary">Checkout</button>
             </div>
-        </section>
-
-    </main>
-
-    <footer>
-
-
-    </footer>
-    <script src="assets/dist/js/bootstrap.popper.min.js"></script>
-    <script src="assets/dist/js/bootstrap.min.js"></script>
-    <script src="assets/js/categories.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/products.js"></script>
-    <script src="assets/js/main.js"></script>
+        </div>
+    </div>
+    <script src="../assets/dist/js/bootstrap.popper.min.js"></script>
+    <script src="../assets/dist/js/bootstrap.min.js"></script>
+    <script src="../assets/js/categories.js"></script>
+    <script src="../assets/js/auth.js"></script>
+    <script src="../assets/js/products.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
