--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <i class="fas fa-shopping-cart text-white"></i>
                             <span
                                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                                id="cart-count">0</span>
+                                id="cart-count"></span>
                         </a>
                         <div id="loginDiv" class="d-flex align-items-center">
                             <a class="text-white me-2" href="/pages/login.html">Login</a>
@@ -97,6 +97,7 @@
     <script src="assets/js/categories.js"></script>
     <script src="assets/js/auth.js"></script>
     <script src="assets/js/products.js"></script>
+    <script src="assets/js/cart.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
