--- a/pages/cart.html
+++ b/pages/cart.html
@@ -47,7 +47,7 @@
                             <i class="fas fa-shopping-cart text-white"></i>
                             <span
                                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                                id="cart-count">0</span>
+                                id="cart-count"></span>
                         </a>
                         <div id="loginDiv" class="d-flex align-items-center">
                             <a class="text-white me-2" href="/pages/login.html">Login</a>
@@ -78,21 +78,11 @@
                             <th>Price</th>
                             <th>Quantity</th>
                             <th>Total</th>
+                            <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Product 1</td>
-                            <td>$10.00</td>
-                            <td>1</td>
-                            <td>$10.00</td>
-                        </tr>
-                        <tr>
-                            <td>Product 2</td>
-                            <td>$15.00</td>
-                            <td>2</td>
-                            <td>$30.00</td>
-                        </tr>
+                    <tbody id="cart-items">
+
                     </tbody>
                 </table>
             </div>
@@ -107,10 +97,8 @@
     </div>
     <script src="../assets/dist/js/bootstrap.popper.min.js"></script>
     <script src="../assets/dist/js/bootstrap.min.js"></script>
-    <script src="../assets/js/categories.js"></script>
     <script src="../assets/js/auth.js"></script>
-    <script src="../assets/js/products.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/cart.js"></script>
 </body>
 
 </html>
