--- a/pages/cart.html
+++ b/pages/cart.html
@@ -82,18 +82,19 @@
     <div class="container">
       <h1 class="my-4">Shopping Cart</h1>
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8" id="cart">
           <h2>Your Items</h2>
-          <table class="table" style="background: #fff">
+          <table class="table">
             <thead>
               <tr>
-                <th>Product</th>
-                <th>Price</th>
-                <th>Quantity</th>
-                <th>Total</th>
-                <th>Actions</th>
+                <th class="rounded-start-5">Product</th>
+                <th class="">Price</th>
+                <th class="">Quantity</th>
+                <th class="">Total</th>
+                <th class="rounded-end-5">Actions</th>
               </tr>
             </thead>
+
             <tbody id="cart-items"></tbody>
           </table>
         </div>
