--- a/src/index.html
+++ b/src/index.html
@@ -1,113 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sala App</title>
-    <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/fonwawsome/all.css" />
-  </head>
 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-        <div class="container-fluid">
-          <a class="navbar-brand fw-bold" href="/index.html">Lets Cookies</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="/index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Policy</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Reviews</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Our Partners</a>
-              </li>
-            </ul>
-            <form class="d-flex align-items-center">
-              <a href="/pages/cart.html" class="position-relative me-3">
-                <i class="fas fa-shopping-cart text-white"></i>
-                <span
-                  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                  id="cart-count"
-                ></span>
-              </a>
-              <div id="loginDiv" class="d-flex align-items-center">
-                <a class="text-white me-2" href="/pages/login.html">Login</a>
-                <span class="text-white">|</span>
-                <a class="text-white ms-2" href="#">Register</a>
-              </div>
-              <div id="profileDiv" class="d-flex align-items-center ms-3">
-                <span class="text-white me-2">|</span>
-                <span class="text-white" id="username"></span>
-                <span class="text-white ms-2">|</span>
-                <i
-                  class="logout fa-solid fa-right-from-bracket text-white ms-2"
-                  onclick="logout()"
-                ></i>
-              </div>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sala App</title>
+  <link rel="stylesheet" href="assets/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/fonwawsome/all.css" />
 
-    <main>
-      <!-- categories -->
-      <section>
-        <div class="container">
-          <div class="row categories" id="categories">
-            <div class="col-md-3">
-              <h5 id="category_3" onclick="addActiveCategory(3)">
-                All Categories
-              </h5>
+
+  <!-- <link rel="stylesheet" href="output.css"> -->
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="/index.html">Lets Cookies</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Policy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Reviews</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Partners</a>
+            </li>
+          </ul>
+          <form class="d-flex align-items-center">
+            <a href="/pages/cart.html" class="position-relative me-3">
+              <i class="fas fa-shopping-cart text-white"></i>
+              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                id="cart-count"></span>
+            </a>
+            <div id="loginDiv" class="d-flex align-items-center">
+              <a class="text-white me-2" href="/pages/login.html">Login</a>
+              <span class="text-white">|</span>
+              <a class="text-white ms-2" href="#">Register</a>
             </div>
+            <div id="profileDiv" class="d-flex align-items-center ms-3">
+              <span class="text-white me-2">|</span>
+              <span class="text-white" id="username"></span>
+              <span class="text-white ms-2">|</span>
+              <i class="logout fa-solid fa-right-from-bracket text-white ms-2" onclick="logout()"></i>
+            </div>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <!-- categories -->
+    <section>
+      <div class="container">
+        <div class="row categories" id="categories">
+          <div class="col-md-3">
+            <h5 id="category_3" onclick="addActiveCategory(3)">
+              All Categories
+            </h5>
           </div>
         </div>
-      </section>
-      <!-- products -->
-      <section>
-        <div class="container">
-          <div class="row my-5 gy-3" id="products"></div>
-        </div>
-      </section>
-    </main>
+      </div>
+    </section>
+    <!-- products -->
+    <section>
+      <div class="container">
+        <div class="row my-5 gy-3" id="products"></div>
+      </div>
+    </section>
+  </main>
 
-    <footer class="footer bg-dark text-white text-center py-3"></footer>
+  <footer class="footer bg-dark text-white text-center py-3"></footer>
 
-    <script src="assets/dist/js/bootstrap.popper.min.js"></script>
-    <script src="assets/dist/js/bootstrap.min.js"></script>
-    <script src="assets/js/categories.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/products.js"></script>
-    <script src="assets/js/cart.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+  <script src="assets/dist/js/bootstrap.popper.min.js"></script>
+  <script src="assets/dist/js/bootstrap.min.js"></script>
+  <script src="assets/js/categories.js"></script>
+  <script src="assets/js/auth.js"></script>
+  <script src="assets/js/products.js"></script>
+  <script src="assets/js/cart.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
 </html>
