--- a/src/index.html
+++ b/src/index.html
@@ -124,14 +124,13 @@
         </ul>
 
         <form class="flex justify-items-center items-center">
-          <a href="/pages/cart.html" class="position-relative me-3">
+          <a href="/pages/cart.html" class="position-relative me-3 relative">
             <i class="fas fa-shopping-cart text-white"></i>
             <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+              class="absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 bg-red-500 text-white rounded-full px-2 py-1 text-xs"
               id="cart-count"
             ></span>
           </a>
-
           <div id="loginDiv" class="flex items-center">
             <a
               class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 px-6 bg-gray-50 hover:bg-gray-100 text-sm text-gray-900 font-bold rounded-xl transition duration-200"
@@ -167,10 +166,15 @@
     <main>
       <!-- categories -->
       <section>
-        <div class="container">
-          <div class="row categories" id="categories">
-            <div class="col-md-3">
-              <h5 id="category_3" onclick="addActiveCategory(3)">
+        <div class="container mx-auto px-4">
+          <!-- animation: bounce 1s infinite; -->
+          <div class="flex justify-between mt-10" id="categories">
+            <div class="w-full md:w-1/4">
+              <h5
+                id="category_3"
+                class="hover:animate-none transform scale-105 transition-all duration-500 animate-bounce bg-white border-2 border-gray-300 rounded-md text-center p-4 cursor-pointer text-xs w-[95%]"
+                onclick="addActiveCategory(3)"
+              >
                 All Categories
               </h5>
             </div>
